# sm4

./: .gitignore  .gitmodules  README.md
.github/: index.html
.github/workflows/: ci.yml  clippy.yml  docs.yml  release.yaml  rustfmt.yml  thesis.yml
Hardware/: _autosave-sm4.kicad_pcb  fp-info-cache  fp-lib-table  sm4-cache.lib  sm4.kicad_pcb  sm4.kicad_pcb-bak  sm4.pro  sm4.sch  sm4.sch-bak  sym-lib-table
Hardware/Cube/: Cube.ioc
Hardware/rev1/: sm4-cache.lib  sm4.kicad_pcb  sm4.kicad_pcb-bak  sm4.pro  sm4.sch  sm4.sch-bak
Hardware/rev2/: fp-info-cache  fp-lib-table  molex_04_l.stp  sm4-cache.lib  sm4.csv  sm4.kicad_pcb  sm4.kicad_pcb-bak  sm4.pro  sm4.sch  sm4.sch-bak  sm4.xml  sym-lib-table  u262-16xn-4bvc11.stp
Slideshow/: T1--Vafle--Regular--base.tfm  T1--Vafle--Regular.vf  VafleVUT-RegularLCDFJ.pfb  beamercolorthemeVUT.sty  nastaveni.tex  vafle.map  xhyblm00_slideshow.tex
Slideshow/text/: literatura.bib  literatura.tex  prilohy.tex  rozsireny_abstrakt.tex  vysledky.tex  zaver.tex
Software/: Cargo.toml  README.md
Software/.cargo/: config.toml
Software/controller/: Cargo.toml
Software/controller/src/: canopen_backend.rs  lib.rs
Software/embedded/: Cargo.toml  README.md  memory.x
Software/shared/: Cargo.toml
Software/shared/src/: encoder.rs  hal.rs  lib.rs  motion_controller.rs  psd.rs  ramp.rs  tmc2100.rs  usb_protocol.rs
Software/shared/src/canopen/: mod.rs  object_dictionary.rs  persistent_dictionary.rs  tx_pdo1.rs  velocity_pdo.rs
Software/shared/src/models/: mod.rs  position.rs  velocity.rs
Software/sm4-controller/: Cargo.toml
Software/sm4-controller/src/: canopen_backend.rs  lib.rs  main.rs  ui.rs
Software/sm4-controller/src/tui/: events.rs  mod.rs
Software/sm4-firmware/: Cargo.toml  README.md  memory.x
Software/sm4-shared/: Cargo.toml
Thesis/: .gitignore  T1--Vafle--Regular--lcdfj.tfm  T1--Vafle--Regular.tfm  a_trqo3o.enc  beamerthemeVUT.sty  generate_bib.sh  literatura.bib  nastaveni.tex  sablona-obhaj.tex  sablona-prace.tex  t1vafle.fd  thesis.sty  thesis.tex  xhyblm00_slideshow.tex
Thesis/text/: abbreviations.tex  appendices.tex  comm_protocol.tex  conclusion.tex  control_software.tex  eeprom.tex  embedded_rust.tex  extended_abstract.tex  firmware.tex  hardware.tex  introduction.tex  kicad_design.tex  literatura.bib  literatura.tex  methodology.tex  pcb_manufacturing.tex  prilohy.tex  related_work.tex  requirements.tex  reseni.tex  results.tex  rust.tex  software.tex  steppers.tex  uvod.tex  zkratky.tex
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/aligned/: all.html  fn.Aligned.html  index.html  struct.A16.html  struct.A2.html  struct.A4.html  struct.A8.html  struct.Aligned.html
doc/bare_metal/: all.html  index.html  struct.Mutex.html  (+3 more)
(+57617 files in other folders)
