[package]
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"
name = "sm4-controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
byteorder = "1.3.4"
crossbeam = "0.8.0"
crossterm = "0.18.0"
ctrlc = "3.1.6"
device_query = "0.2.5"
glib = "0.10.3"
i2cdev = "0.4.4"
parking_lot = "0.11.1"
sm4-shared = {path = "../shared"}
tui = {git = "https://github.com/fdehau/tui-rs.git", branch = "master", features = ["crossterm"]}

[dependencies.socketcan]
branch = "canopen"
git = "https://github.com/matoushybl/socketcan-rs.git"

[dependencies.gtk]
features = ["v3_16"]
version = "0.9.2"

[dependencies.gio]
features = ["v2_44"]
version = "0.9.1"
