[package]
name = "sm4-shared"
version = "0.1.0"
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-time = "0.10.1"
embedded-hal = "0.2.4"
spin = "0.9.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]