[package]
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"
name = "sm4-shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc_all = "0.2.0"
embedded-hal = "0.2.4"
embedded-time = "0.10.1"
spin = "0.9.0"

[dependencies.num-traits]
default-features = false
features = ["libm"]
version = "0.2"
