[package]
name = "sm4-controller"
version = "0.1.0"
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"
crossbeam = "0.8.0"
ctrlc = "3.1.6"
byteorder = "1.3.4"
device_query = "0.2.5"
crossterm = "0.18.0"

[dependencies.socketcan]
git = "https://github.com/matoushybl/socketcan-rs.git"
branch = "canopen"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]